--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-This is your new Play application
-=====================================
+## Play SQL Demo
 
-This file will be packaged with your application, when using `play dist`.
+Using Postgresql as database to the Play application.
+
+You can check how to connect to postgresql in **application.conf** file.
+
+![alt text](PlaySQLDemo.png "Play postgresql Image")
+
+Application running live [here](https://peaceful-reaches-92756.herokuapp.com/)
